--- a/CEGVN/CEGVN.csproj
+++ b/CEGVN/CEGVN.csproj
@@ -83,6 +83,8 @@
     <Compile Include="TMP\TMP.01.01.CalloutDimension.cs" />
     <Compile Include="TMP\Support.cs" />
     <Compile Include="TVD\aaaaaaaaaaaaaaaaaaaaaaa.cs" />
+    <Compile Include="TVD\T.ElementtransformToCopy.cs" />
+    <Compile Include="TVD\T.lbr.cs" />
     <Compile Include="TVD\TVD.05.04.Interference Report.cs">
       <SubType>Form</SubType>
     </Compile>
