--- a/CEGVN/CEGVN.csproj
+++ b/CEGVN/CEGVN.csproj
@@ -86,6 +86,7 @@
     <Compile Include="TVD\Controller\RvtController.cs" />
     <Compile Include="TVD\Extensions\PlaneHelper.cs" />
     <Compile Include="TVD\Extensions\SelectionFilter.cs" />
+    <Compile Include="TVD\Extensions\SelectionUtils.cs" />
     <Compile Include="TVD\Extensions\Util.cs" />
     <Compile Include="TVD\SettingExtension.cs" />
     <Compile Include="TVD\TVD.06.02.FrmFindGravity.cs">
@@ -171,6 +172,8 @@
     <Compile Include="TVD\TVD.12.01.RebarSymbolCreatorCmd.cs" />
     <Compile Include="TVD\TVD.12.02.RebarSymbolCreatorController.cs" />
     <Compile Include="TVD\TVD.13.01.LineForDimCmd.cs" />
+    <Compile Include="TVD\TVD.14.01.AllElementOfTypeInActiveViewCmd.cs" />
+    <Compile Include="TVD\TVD.15.01.SelectbyControlMarkcmd.cs" />
     <Compile Include="TVD\TVD.EventRegisterHandler.cs" />
     <Compile Include="TVD\TVD.ProgressBarform.cs">
       <SubType>Form</SubType>
